src/snapshots/scrut__diff__tests__regression_excess_expectations_after_multiline_fail.snap
---
source: src/diff.rs
assertion_line: 782
expression: diffs
---
[matched: 3, unmatched: 1, unexpected: 0]
0001      | = * (glob+)
     0001 | = foo
     0002 | = foo
     0003 | = baz
0002      | - bar (+)


