src/snapshots/scrut__diff__tests__serialize.snap
---
source: src/diff.rs
expression: "&rendered"
---
---
lines:
  - kind: matched_expectation
    index: 0
    expectation: matched (equal)
    lines:
      - - 0
        - "line content\n"
  - kind: unmatched_expectation
    index: 0
    expectation: unmatched (equal)
  - kind: unexpected_lines
    lines:
      - - 0
        - "line content\n"

