src/snapshots/scrut__diff__tests__tailing_multiline_expectation.snap
---
source: src/diff.rs
expression: diffs
---
[matched: 4, unmatched: 0, unexpected: 0]
0001      | = baz (+)
     0001 | = baz
0002      | = f* (glob+)
     0002 | = foo
     0003 | = fun
     0004 | = fact

