src/snapshots/scrut__diff__tests__unmatched_heading_expectation.snap
---
source: src/diff.rs
expression: diffs
---
[matched: 2, unmatched: 1, unexpected: 0]
0001      | - foo
0002      | = bar
     0001 | = bar
0003      | = baz
     0002 | = baz

